# -agent-orchestration-course-final

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 91838bac70a5_initial.py
config/: game_defaults.json  mcp_allowlist.json  rate_limits.json  setup.json
docs/: PRD.md  PRD_actor.md  PRD_actor_updated.md  PRD_email_report.md  PRD_game_engine.md  PRD_llm_agent.md  PRD_mcp_intergroup.md  PRD_negotiation.md  PRD_replay_history.md  PRD_rest_api.md  PRD_webserver.md  README_docs_index.md  TODO.md  cost.md  game_rules.md  plan.md  plan_actor.md  plan_actor_neural_training.md  plan_email_report.md  plan_game_engine.md  plan_llm_agent.md  plan_mcp_intergroup.md  plan_negotiation.md  plan_replay_history.md  plan_rest_api.md  plan_webserver.md  rules.md
src/cop_thief/: __init__.py  constants.py
src/cop_thief/actors/: __init__.py  action_mask.py  base.py  heuristic_actor.py  model_actor.py  model_bank.py  random_actor.py  rl_env.py  self_play_runner.py  training_config.py
src/cop_thief/agents/: __init__.py  communication_agent.py  hidden_state_filter.py  message_generator.py  message_parser.py
src/cop_thief/api/: deps.py  routes_admin.py  routes_auth.py  routes_games.py  routes_health.py  routes_server.py  routes_ws.py  ws_manager.py
src/cop_thief/cli/: server_ctl.py  (+1 more)
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_game_endpoints.py  test_health.py  test_mcp_endpoint.py
tests/unit/: __init__.py  test_version.py
(+88 files in other folders)
